<resources>
    <string name="app_name">Aquarium smart</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_senor">sensor</string>
    <string name="menu_Actuators">Actuators</string>
    <string name="menu_camera">camera</string>
    <string name="menu_RGB">RGB</string>
    <string name="menu_logout">Logout</string>
</resources>